# Similaridad-coseno

./: Preprocesamiento.txt  ProyectoF.txt  ProyectoLimpio.txt  asd.xml  example.draw  limpiarTxt.py  line2txt.py  main.py  preprocesamiento.py  pyproject.toml  stemmer.py  stemming.txt  stopWords.py  tfidf.py
dataset/: filename0.txt  filename1.txt  filename10.txt  filename11.txt  filename12.txt  filename13.txt  filename14.txt  filename15.txt  filename16.txt  filename17.txt  filename18.txt  filename19.txt  filename2.txt  filename20.txt  filename21.txt  filename22.txt  filename23.txt  filename24.txt  filename25.txt  filename26.txt  filename27.txt  filename28.txt  filename29.txt  filename3.txt  filename30.txt  filename31.txt  filename32.txt  filename33.txt  filename34.txt  filename35.txt  filename36.txt  filename37.txt  filename38.txt  filename39.txt  filename4.txt  filename40.txt  filename41.txt  filename42.txt  filename43.txt  filename44.txt  (+57 more)
