[tool.poetry]
name = "repl_python3_Similaridad-coseno"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
stop-words = "^2018.7.23"
stemming = "^1.0.1"
spacy = "^3.0.6"
snowballstemmer = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
